# VERSIONED_R_PIPELINE

./: .context-broker.yaml  .env.example  .gitattributes  .gitignore  .ruff.toml  ACMS_BUILD_EXECUTION_CONTRACT.yaml  ACMS_EXECUTIVE_SUMMARY.md  ACMS_GAP_ANALYSIS_AND_FIX_PLAN.md  ACMS_TEST_IMPORT_FIX_GUIDE.md  Blueprint for the Autonomous Code Modification System (1).docx  CLAUDE_CHAT_2.docx  CONTEXT_BROKER_CONTRACT.yaml  Deterministic pipeline .txt  Development types chat.txt  EXECUTION_STATE_MACHINE_CONTRACT.yaml  Headless Automated Pipeline Proposal.txt  INTEGRATION_GUIDE_for_reference_implementations.md  LICENSE  NW_CGPT_process_toolkit_python_draft_v_0.md  NW_DES_CHAT_FOR_NEW_ARC.md  NW_Modular_Plugin Architecture_Summary.md  NW_identified resources.md  README.md  R_PIPELINE Operating Contract.docx  R_PIPELINE_IMPLEMENTATION_GUIDE.md  Recommended Documentation Strategy Execution Contracts for AI Agents.docx  Supplemental Development Plan for ACMS_EXECUTIVE_SUMMARY.docx  Workflow (1).docx  chat_chat_.txt  complete list of files ACMS.docx  docker-compose.yml  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup_dev.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  doc-tags.yml  docs-guard.yml
View ACMS Gap Analysis & Fix Plan/: IMPLEMENTATION_SUMMARY.md  README_updated.md  immediate_ci_enforcement_conftest.py  setup_dev.ps1  tests_conftest.py
core/: Generate-PluginScaffold.ps1  Validate-Plugin.ps1  __init__.py  config.py  orchestrator.py  plugin_loader.py  runner.py  state_machine.py  task_scheduler.py
core/context/: dispatcher.py
core/observability/: ledger.py  tracing.py  ulid_generator.py
core/validation/: __init__.py  code_gate.py  linters.py  security_scanner.py
core/worktree/: manager.py  sync.py
docker/jaeger/: docker-compose.yml
docs/: OPERATING_CONTRACT.md  index.md
features/: file_deduplication.feature
features/steps/: deduplication_steps.py
immediate CI enforcement and reproducibility/: README.txt  context_broker.py  context_broker.schema.json  execution_state_machine.example.json  execution_state_machine.schema.json  state_machine.py  task_scheduler.py  test_state_machine.py  test_toposort.py
infrastructure/: stack_plan.json
infrastructure/pulumi/: Pulumi.yaml  __main__.py
infrastructure/tests/: test_infrastructure.py
install-claude-codex/: QUICKSTART.md  README.md  diagnose.ps1  install-claude-codex.ps1
plugins/: __init__.py
schemas/: context_broker.schema.json  execution_state_machine.schema.json
scripts/: deploy.sh  generate_docs.py  generate_plugin_scaffold.py  validate_plugin.py
tests/: conftest.py  test_acms_state_machine.py  test_acms_toposort.py  test_plugin_loader.py  test_state_machine_contract.py  test_task_scheduler_toposort.py  test_worktree.py
tests/integration/: test_plugin_integration.py  test_workflow_execution.py
tools/: context_broker.py
