# ACMS Configuration
# Version: 1.0.0
# Date: 2025-11-02
# Owner: Platform.Engineering

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acms"
version = "0.1.0"
description = "Autonomous Code Modification System"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "opentelemetry-sdk>=1.24",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true
plugins = []

[tool.ruff]
line-length = 100
src = ["core", "tests", "scripts"]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
